Thu Oct 26 04:00:00 2000  Luther J Baker  <luther@cs.wustl.edu>

        * pace/win32/schedtypes.h:
        * pace/win32/sched.h:
          
          Compliance with ACE_HAS_PACE for ACE.
          sched_param now has a member sched_priority.

Wed Oct 18 15:41:20 2000  Luther J Baker  <luther@cs.wustl.edu>

        * pace/win32/pthread.h:
        * pace/win32/pthreadtypes.h:
        * pace/semphore.h:
        * pace/win32/semphore.h:
        * pace/win32/semphore.inl:

          Debugging ACE building with PACE over NT
          ACE_HAS_PACE.

Tue Oct  3 15:37:35 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/posix/stdio.inl:
          Added vfprintf, vprintf, and vsprintf support

Tue Sep 26 15:19:20 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * tests/Makefile:
        * pace/Makefile:
          Moved checks for inlining flags down in the file so
          that include/makeinclude/platform_macros.GNU can be
          checked to see if the flags are set there.

        * pace/posix/stdio.h:
          Moved stdio.h header file include after stdarg.h
          header file (per comment in ace/OS.h file)

Fri Sep 22 11:32:25 2000  Darrell Brunsch <brunsch@uci.edu>

        * PACE/pace/posix/math.inl:
        * PACE/pace/win32/math.inl:

          Disabled fuzz math.h inclusion check.

Wed Sep 13 13:52:00 2000  Luther J Baker  <luther@maxixe.doc.wustl.edu>

	* pace/win32/types.h:

	  Removed irrelevant base types and kept pace_* types.

	  (ie:
	      typedef DWORD nlink_t;
	      typedef nlink_t pace_nlink_t;
	  became
	      typedef DWORD pace_nlink_t;
	  )

Wed Sep 13 13:42:15 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/sys/wait.h:

	  More types changed to pace_*.

Wed Sep 13 13:25:33 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/unistd.h: 
	* pace/win32/unistd.inl:

	  Even more type shifts to pace_*.

Wed Sep 13 13:06:27 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/unistd.h: 

	  More of uid_t to pace_uid_t.
